[gd_scene load_steps=5 format=2]

[ext_resource path="res://managers/core/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://assets/music/level1/Drum.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/music/level1/Guitar.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Level1"
length = 32.0
loop = true
step = 0.5
tracks/0/type = "audio"
tracks/0/path = NodePath("MainTrack")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Instrument1Track")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10, 10.5, 11, 11.5, 12, 12.5, 13, 13.5, 14, 14.5, 15, 15.5, 16, 16.5, 17, 17.5, 18, 18.5, 19, 19.5, 20, 20.5, 21, 21.5, 22, 22.5, 23, 23.5, 24, 24.5, 25, 25.5, 26, 26.5, 27, 27.5, 28, 28.5, 29, 29.5, 30, 30.5, 31, 31.5, 32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
}, {
"args": [  ],
"method": "one_beat"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 32 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 8.0 ],
"method": "jump_to"
} ]
}

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AnimationPlayer" parent="."]
autoplay = "Level1"
anims/Level1 = SubResource( 1 )

[node name="MainTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Instrument1Track" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
